# midnight-extractor

./: .envrc.skel  .gitignore  404.html  Cargo.toml  LICENSE  README.md  chip_support.html  extraction.html  index.html  installation.html  intro.html  new_harness.html  print.html  requirements.txt  searcher-c2a407aa.js  searchindex-049236c5.js  searchindex-26397c80.js  searchindex-539e258e.js  searchindex-6b199a7c.js  searchindex-90e6ecb0.js  searchindex-eb7e533e.js  toc-6ee936f5.js  toc-abd55088.js  toc-e2b6dfdf.js  toc.html  types_support.html
.github/workflows/: docs.yml
audit-hub/: first-project.html  intro.html  jobs.html  uploading.html
crates/core/: Cargo.toml
crates/core/src/: fields.rs  lib.rs
crates/core/src/cells/: load.rs  store.rs
crates/extractor/: Cargo.toml  build.rs
crates/extractor-core/: Cargo.toml
crates/extractor-core/src/: chips.rs  circuit.rs  fields.rs  harness.rs  lib.rs  patterns.rs  utils.rs
crates/extractor-core/src/cells/: load.rs
crates/extractor-core/src/chips/: adaptor.rs  ecc.rs  hash_to_curve.rs  native.rs  ripemd160.rs  sha256.rs  vector.rs
crates/extractor-core/src/chips/native/: arith.rs  assertion.rs  assignment.rs  binary.rs  canonicity.rs  comparison.rs  control_flow.rs  conversion.rs  decomposition.rs  division.rs  equality.rs  field.rs  from_scratch.rs  public_input.rs  range_check.rs  unsafe_conversion.rs  zero.rs
crates/extractor-core/src/circuit/: assignment.rs  configuration.rs  layouter.rs  traits.rs
crates/extractor-core/src/lookups/: callbacks.rs
crates/extractor-core/src/lookups/callbacks/: automaton.rs  ignore.rs  mux.rs  plain_spread.rs  plain_spread3.rs  plain_spread4.rs  range.rs
crates/extractor-core/src/patterns/: decompose_core.rs
crates/extractor-core/tests/: harness.rs
crates/extractor-macros/: Cargo.toml
crates/extractor-macros/src/: delegated_impl.rs  error.rs  harness_impl.rs  lib.rs
crates/extractor-macros/src/harness_impl/: cfg.rs
crates/extractor-macros/src/parse/: harness.rs
crates/extractor/src/: app.rs  chips.rs  cli.rs  config.rs  instructions.rs  lib.rs  main.rs  picus.rs  query.rs  utils.rs
crates/extractor/src/app/: error.rs
crates/extractor/src/picus/: automaton.picus.inc  header.rs  prelude.rs  spread.picus.inc
crates/groups-support/: Cargo.toml  README.md
crates/groups-support/src/: lib.rs
crates/harnesses/: Cargo.toml  README.md
crates/harnesses/src/: arithmetic.rs  assertion.rs  assignment.rs  automaton.rs  base64.rs  base64var.rs  biguint.rs  binary.rs  bitwise.rs  canonicity.rs  committed_instance.rs  comparison.rs  control_flow.rs  conversion.rs  core_decomposition.rs  decomposition.rs  division.rs  ecc.rs  equality.rs  field.rs  foreign_ecc.rs  hash.rs  hash_to_curve.rs  lib.rs  map.rs  map_to_curve.rs  parser.rs  pow2range.rs  public_input.rs  range_check.rs  sha3.rs  sponge.rs  stdlib.rs  unsafe_conversion.rs  varhash.rs  vector.rs  zero.rs
crates/harnesses/src/arithmetic/: foreign.rs  native.rs  native_gadget.rs  stdlib.rs
crates/harnesses/src/assertion/: biguint.rs  ecc.rs  field.rs  native.rs  native_gadget.rs  stdlib.rs  vector.rs
crates/harnesses/src/assertion/foreign_ecc/: field.rs  native.rs
crates/harnesses/src/assignment/: ecc.rs  field.rs  native.rs  native_gadget.rs  stdlib.rs  vector.rs
crates/harnesses/src/assignment/foreign_ecc/: field.rs  native.rs
crates/harnesses/src/control_flow/: biguint.rs  ecc.rs  native.rs  native_gadget.rs  stdlib.rs
crates/harnesses/src/control_flow/foreign_ecc/: field.rs  native.rs
crates/harnesses/src/ecc/: native_ecc.rs
crates/harnesses/src/ecc/foreign_ecc/: field.rs  native.rs
crates/harnesses/src/equality/: biguint.rs  ecc.rs  foreign.rs  foreign_ecc.rs  native.rs  native_gadget.rs  stdlib.rs  vector.rs
crates/harnesses/src/equality/foreign_ecc/: field.rs  native.rs
crates/harnesses/src/public_input/: ecc.rs  field.rs  native.rs  native_gadget.rs  stdlib.rs
crates/harnesses/src/public_input/foreign_ecc/: field.rs  native.rs
crates/harnesses/src/vector/: stdlib.rs  vector_gadget.rs
crates/harnesses/src/zero/: biguint.rs  ecc.rs  field.rs  native.rs  native_gadget.rs  stdlib.rs
crates/harnesses/src/zero/foreign_ecc/: field.rs  native.rs
crates/support/: Cargo.toml
crates/support-macros/: Cargo.toml  README.md
crates/support-macros/src/: decompose.rs  extractor.rs  group_impl.rs  lib.rs
crates/support-macros/src/parse/: extractor.rs  group.rs
crates/support-macros/tests/: decompose.rs  extraction.rs
crates/support-macros/tests/expand/decompose/fail/: union.rs
crates/support-macros/tests/expand/decompose/pass/: enum.expanded.rs  enum.rs  struct.expanded.rs  struct.rs  tuple_struct.expanded.rs  tuple_struct.rs  unit_struct.expanded.rs  unit_struct.rs
crates/support-macros/tests/expand/extraction/pass/: from_scratch.expanded.rs  from_scratch.rs
crates/support/src/: cells.rs  circuit.rs  error.rs  lib.rs  macros.rs
crates/support/src/cells/: ctx.rs  load.rs  store.rs
crates/support/src/circuit/: configuration.rs  injected.rs
docs/: book.toml
docs/src/: SUMMARY.md  chip_support.md  extraction.md  installation.md  intro.md  new_harness.md  types_support.md
docs/src/audit-hub/: first-project.md  intro.md  jobs.md  uploading.md
scripts/: extract_all.sh
