[workspace]
members = [ "crates/core", "crates/groups-support", "crates/support","crates/support-macros"]
resolver = "2"

[workspace.package]
version = "0.2.1"
authors = ["Daniel Dominguez (Veridise) <daniel@veridise.com>"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/Veridise/midnight-extractor"
license-file = "LICENSE"

[workspace.dependencies]
ff = "0.13"
haloumi-ir = "0.1.0"

[workspace.dependencies.midnight-proofs]
# Commented out until https://github.com/midnightntwrk/midnight-zk/pull/137 merges.
# git = "https://github.com/midnightntwrk/midnight-zk"
git = "https://github.com/Veridise/midnight-zk"
default-features = false
features = [
    "bits",
    # "cost-estimator",
    "circuit-params",
    "committed-instances",
    "region-groups",
    "extraction"
] 

[workspace.dependencies.midnight-circuits]
# Commented out until https://github.com/midnightntwrk/midnight-zk/pull/137 merges.
# git = "https://github.com/midnightntwrk/midnight-zk"
git = "https://github.com/Veridise/midnight-zk"
default-features = false
features = [
    "extraction"
] 

[workspace.dependencies.midnight-curves]
git = "https://github.com/Veridise/midnight-zk"


[workspace.dependencies.haloumi]
git = "https://github.com/Veridise/llzk-rs"
default-features = false
features = ["picus-backend"]
package = "halo2-llzk-frontend"
branch = "dani/convenience-methods"

