[workspace]
members = [ "crates/extractor", 
  "crates/extractor-core", 
  "crates/extractor-macros", 
  "crates/groups-support", "crates/harnesses", 
  "crates/support",
  "crates/support-macros"
]
resolver = "2"

[workspace.package]
version = "0.2.13"
authors = ["Daniel Dominguez (Veridise) <daniel@veridise.com>"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/Veridise/midnight-extractor"
license-file = "LICENSE"

[workspace.dependencies]
ff = "0.13"
haloumi-ir = "0"
haloumi-core = "0"
inventory = "0"
anyhow = "1"
mdnt-support = "0.2"
halo2curves = { version = "0.7.0", default-features = false }

[workspace.dependencies.sha3-circuit]
git = "https://github.com/Veridise/sha3-circuit-midnight"
branch = "extraction"
features = ["extraction"]

[workspace.dependencies.midnight-proofs]
# Commented out until https://github.com/midnightntwrk/midnight-zk/pull/137 merges.
# git = "https://github.com/midnightntwrk/midnight-zk"
git = "https://github.com/Veridise/midnight-zk"
default-features = false
features = [
    # "bits",
    # "cost-estimator",
    "circuit-params",
    "committed-instances",
    "region-groups",
    "extraction"
] 

[workspace.dependencies.midnight-circuits]
# Commented out until https://github.com/midnightntwrk/midnight-zk/pull/137 merges.
# git = "https://github.com/midnightntwrk/midnight-zk"
git = "https://github.com/Veridise/midnight-zk"
default-features = false
features = [
    "extraction"
] 

[workspace.dependencies.midnight-curves]
git = "https://github.com/Veridise/midnight-zk"


[workspace.dependencies.haloumi]
path = "../llzk-rs/frontends/halo2"
# git = "https://github.com/Veridise/llzk-rs"
default-features = false
features = ["picus-backend"]
package = "halo2-llzk-frontend"
# branch = "dani/convenience-methods"

