[package]
name = "mdnt-extractor-core"
description = "Core types of the midnight-extractor"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
repository.workspace = true
license-file.workspace = true
publish = false

[dependencies]
ff.workspace = true 
midnight-proofs.workspace = true
midnight-circuits.workspace = true
midnight-curves.workspace = true
mdnt-support = { version = "0.2.2"}
num-bigint = "0.4"
haloumi-ir.workspace =true
haloumi-ir-base.workspace =true
haloumi-core.workspace =true
haloumi.workspace =true
mdnt-extractor-macros = { path = "../extractor-macros"}
log = "0.4"
anyhow = "1"

[dev-dependencies]
rstest = "0.26"
similar-asserts = "1.7"
simplelog = {version = "0.12", features = ["test"] }
