[package]
name = "mdnt-extractor"
description = "Entrypoint for running the extractor"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "midnight-extractor"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
haloumi.workspace = true
ff.workspace = true 
midnight-circuits.workspace = true
mdnt-support.workspace = true
mdnt-extractor-core = { path = "../extractor-core"}
mdnt-harnesses = { path = "../harnesses"}
anyhow.workspace = true
thiserror = "2"
chrono = "0.4"

# Logging dependencies
log = "0.4"
simplelog = "0.12"
env_logger = "0.11"
multi_log = "0.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true}

[build-dependencies]
cargo-lock = "10"
anyhow = "1"

[features]
default = ["cli", "sha3"]
cli = ["clap"]
sha3 = ["mdnt-harnesses/sha3"]
