[package]
name = "mdnt-support-macros"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
rust-version = {workspace = true}
readme = {workspace = true}
repository = {workspace = true}
license-file = {workspace = true}

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
macrotest = "1.2"

[features]
default = []
region-groups = []
