[package]
name = "mdnt-support"
description = "Support for integrating Midnight with the extractor"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
thiserror= "2"
num-bigint = "0.4"
num-traits = "0.2"
log = "0.4"

mdnt-groups-support = { version = "0.2.0"}

ff.workspace = true
# midnight-curves.workspace = true 
# midnight-proofs = {workspace = true, optional = true}
haloumi-ir.workspace =true

[dev-dependencies]
rstest = "0.26"


